--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "D:\\Dateien\\Visual Studio Components\\Python37_64\\python.exe"
+    "python.pythonPath": "C:\\Users\\Manuel\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
 }
